home-services/metube/metube-deployment.yaml
#Bump
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metube-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metube
  template:
    metadata:
      labels:
        app: metube
    spec:
      volumes:
        - name: data
          hostPath:
            path: /opt/data
            type: directory
      containers:
        - name: metube
          image: ghcr.io/alexta69/metube
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: data
            mountPath: /downloads
            subPath: downloads
