home-services/metube/metube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5600
      targetPort: 80
  selector:
    app: meutube
