home-services/metube/metube-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: metube
spec:
  rules:
    - host: "metube.beetlestone.nz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metube
                port:
                  number: 5600
